# Artillery_Fire_Control_System

./: .gitignore  AFCS.spec  CMakeLists.txt  Makefile  PLAN.md  README.md  TESTING.md  app.py  auto_updater.c  cli_calculator.c  gui_dialogs.c  gui_dialogs.h  installer_gui.c  main.py  spec.py  update_manifest.json  version.h
AFCS.Wpf/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
AFCS.Wpf/Services/: RangeTableService.cs
afcs/: __init__.py  calculations.py  config.py  device_profile.py  log_view.py  logs.py  menu_bar.py  range_tables.py  share.py  theme.py  ui.py  ui_theme.py  update.py  version.py  versioning.py
afcs/equipment/: __init__.py  base.py  m109a6.py  m1129.py  m119.py  registry.py  rm70.py  siala.py
afcs/ui/: __init__.py  app.py  log_view.py  solutions.py  theme.py
docs/: android_build.md  build_targets.md  classes_ko.md
icons/: README.md
mobile/: kivy_main.py
rangeTables/: FV432_rangeTable_high_1.csv  M109A6_rangeTable_high_3.csv  M109A6_rangeTable_low_1.csv  M1129_rangeTable_high_1.csv  M1129_rangeTable_high_2.csv  M119_rangeTable_high_0.csv  M119_rangeTable_high_2.csv  M119_rangeTable_low_1.csv  RH-70_rangeTable_high_0.csv  RH-70_rangeTable_low_0.csv  RM70_rangeTable_high_0.csv  RM70_rangeTable_high_1.csv  RM70_rangeTable_high_2.csv  RM70_rangeTable_high_3.csv  RM70_rangeTable_low_1.csv  RM70_rangeTable_low_2.csv  Siala_rangeTable_high_0.csv  Siala_rangeTable_low_0.csv  siala_rangeTable_high_0.csv  siala_rangeTable_high_11.csv  siala_rangeTable_high_12.csv  siala_rangeTable_high_2.csv  siala_rangeTable_high_3.csv  siala_rangeTable_high_6.csv  siala_rangeTable_low_0.csv  siala_rangeTable_low_1.csv  siala_rangeTable_low_15.csv  siala_rangeTable_low_3.csv  siala_rangeTable_low_4.csv  siala_rangeTable_low_5.csv  siala_rangeTable_low_7.csv
rangeTables/M109A6/: M109A6_rangeTable_high_0.csv  M109A6_rangeTable_high_1.csv  M109A6_rangeTable_high_2.csv  M109A6_rangeTable_high_4.csv  M109A6_rangeTable_low_0.csv  M109A6_rangeTable_low_2.csv  M109A6_rangeTable_low_3.csv  M109A6_rangeTable_low_4.csv
rangeTables/M1129/: M1129_rangeTable_high_0.csv  M1129_rangeTable_high_2.csv
rangeTables/M119/: M119_rangeTable_high_1.csv  M119_rangeTable_low_0.csv  M119_rangeTable_low_2.csv
rangeTables/RM70/: RM70_rangeTable_high_0.csv  RM70_rangeTable_high_1.csv  RM70_rangeTable_high_2.csv  RM70_rangeTable_low_0.csv  RM70_rangeTable_low_3.csv
rangeTables/siala/: siala_rangeTable_high_1.csv  siala_rangeTable_high_10.csv  siala_rangeTable_high_4.csv  siala_rangeTable_high_5.csv  siala_rangeTable_high_7.csv  siala_rangeTable_high_8.csv  siala_rangeTable_high_9.csv  siala_rangeTable_low_10.csv  (+8 more)
scripts/: run_checks.sh
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  RangeTable.cpp  RangeTable.h  main.cpp
tests/: test_range_tables.py
